--- a/zadanie-47610/style.css
+++ b/zadanie-47610/style.css
@@ -26,3 +26,23 @@ ol {
     color: chocolate;
     background-color: white;
 }
+
+.li1 {
+    color: brown;
+}
+
+.li2 {
+    color: blueviolet;
+}
+
+.li3 {
+    color: chocolate;
+}
+
+.li4 {
+    color: cornflowerblue;
+}
+
+.li5 {
+    color: rgb(233, 246, 0);
+}
