--- a/zadanie-47606/css/style.css
+++ b/zadanie-47606/css/style.css
@@ -1,3 +1,19 @@
+h1 {
+    color: white;
+    margin-left: 10px;
+    line-height: 40px;
+
+}
+
 div {
-    background-color: #fea500;
+    background-color: orange;
+    height: 100px;
+    width: 100px;
+    margin: 1px 1px 10px 20px;
+}
+
+section {
+    background-color: grey;
+    max-width: 40vh;
+    height: 530px;
 }
